<resources>
    <string name="app_name">Event Calendar</string>
    <string name="event_calendar_no_events">No events where found for the selected day!</string>
    <string name="event_calendar_current_week">Aktuelle Woche</string>
    <string name="login">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or, sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already signed up?</string>
    <string name="by_signing_up_you_agree_to_our_terms_conditions_and_privacy_policy"><![CDATA[By signing up, you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="full_name">Full name</string>
    <string name="dialog_title">Add memo</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="memo">Memo</string>
    <string name="logout">Sign Out</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="request_users">Request Users</string>
    <string name="month_view">Monthly View</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="my_calendar">My Calendar</string>
    <string name="back_to_mine">Back to mine</string>
</resources>